--- a/py/tello/templates/telemetry.html
+++ b/py/tello/templates/telemetry.html
@@ -24,35 +24,35 @@
             <img class="left" src="https://www.freeiconspng.com/thumbs/battery-icon/battery-icon-13.png" width="80px" alt="">
           </div>
           <div class="col s4 left"><strong><h4 class="left">Battery</h4></strong></div>
-          <div class="col s4 left"><strong><h4 class="right">80%</h4></strong></div>
+          <div class="col s4 left"><strong><h4 id="battery" class="right">80%</h4></strong></div>
         </div>
         <div class="row">
           <div class="col s4 left">
             <img class="left" src="https://img.icons8.com/ios/452/speed.png" width="80px" alt="">
           </div>
           <div class="col s4 left"><strong><h4 class="left">Speed</h4></strong></div>
-          <div class="col s4 left"><strong><h4 class="right">0m/s</h4></strong></div>
+          <div class="col s4 left"><strong><h4 id="speed" class="right">0m/s</h4></strong></div>
         </div>
         <div class="row">
           <div class="col s4 left">
             <img class="left" src="https://static.thenounproject.com/png/1671593-200.png" width="80px" alt="">
           </div>
           <div class="col s4 left"><strong><h4 class="left">Flight Time</h4></strong></div>
-          <div class="col s4 left"><strong><h4 class="right">0 min </h4></strong></div>
+          <div class="col s4 left"><strong><h4 id="flight_time" class="right">0 min </h4></strong></div>
         </div>
         <div class="row">
           <div class="col s4 left">
             <img class="left" src="https://img.icons8.com/ios/452/height.png" width="80px" alt="">
           </div>
           <div class="col s4 left"><strong><h4 class="left">Height</h4></strong></div>
-          <div class="col s4 left"><strong><h4 class="right">0cm</h4></strong></div>
+          <div class="col s4 left"><strong><h4 id="height" class="right">0cm</h4></strong></div>
         </div>
         <div class="row">
           <div class="col s4 left">
             <img class="left" src="https://static.thenounproject.com/png/209086-200.png" width="80px" alt="">
           </div>
           <div class="col s4 left"><strong><h4 class="left">Attitude</h4></strong></div>
-          <div class="col s4 left"><strong><h4 class="right">0m</h4></strong></div>
+          <div class="col s4 left"><strong><h4 id="attitude" class="right">0m</h4></strong></div>
         </div>
     </div>
 
@@ -62,6 +62,7 @@
     <script>
         $(document).ready(function(){
             $('select').formSelect();
+            setTimeout(executeQuery, 5000);
         });
     </script>
 
@@ -69,23 +70,16 @@
       telemetry_url = 'http://127.0.0.1:5000/telemetry_update'
       function executeQuery() {
         $.getJSON( telemetry_url, function(data) {
-                console.log( "success" );
-            }).done(function() {
-                console.log( "second success" );
-            })
-            .fail(function() {
-                console.log( "error" );
-            })
-            .always(function() {
-                console.log( "complete" );
-                });
-        setTimeout(executeQuery, 5000); // you could choose not to continue on failure...
+          battery = data.time.split('.')[1].slice(5,7)
+          document.getElementById('battery').innerText = battery+'%'
+          document.getElementById('speed').innerText = battery+'m/s'
+          document.getElementById('flight_time').innerText = battery+'min'
+          document.getElementById('height').innerText = battery+'cm'
+          document.getElementById('attitude').innerText = battery+'m'
+          console.log(battery)
+        })
+        setTimeout(executeQuery, 1000); // you could choose not to continue on failure...
     }
-
-    $(document).ready(function() {
-      // run the first time; all subsequent calls will take care of themselves
-      setTimeout(executeQuery, 5000);
-    });
     </script>
     
 </body>
