--- a/py/tello/templates/index.html
+++ b/py/tello/templates/index.html
@@ -1,24 +1,73 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <title>Live Streaming Demonstration</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Live Feed</title>
 </head>
 <body>
+<div class="container center">
+    <div class="row">
+            <h3>Live Feed</h3>
+            <img src="/imgs/report-imgs/Obama 2-report.jpg" width="70%">
+            <!-- <img class="center" src="{{ url_for('video_feed') }}" width="70%"> -->
+    </div>
+</div>
 <div class="container">
     <div class="row">
-        <div class="col-lg-8  offset-lg-2">
-            <h3 class="mt-5">Live Streaming</h3>
-            <img src="{{ url_for('video_feed') }}" width="100%">
+        <div class="col s4">
+            <div class="row">
+              <div class="col s4"></div>
+              <div class="col s4"><a style="padding-left: 30px;" class="purple darken-3 waves-effect waves-light btn"><i class="material-icons left">arrow_upward</i></a></div>
+              <div class="col s4"></div>
+            </div>
+            <div class="row">
+              <div class="col s4"><a style="padding-left: 30px;" class="purple darken-3 waves-effect waves-light btn"><i class="material-icons left">arrow_back</i></a></div>
+              <div class="col s4"></div>
+              <div class="col s4"><a style="padding-left: 30px;" class="purple darken-3 waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i></a></div>
+            </div>
+            <div class="row">
+              <div class="col s4"></div>
+              <div class="col s4"><a style="padding-left: 30px;" class="purple darken-3 waves-effect waves-light btn"><i class="material-icons left">arrow_downward</i></a></div>
+              <div class="col s4"></div>
+            </div>
+        </div>
+        <div class="center col s4">
+            <a onclick="cntrl('take_off')" class="waves-effect waves-light btn">Take Off</a>
+            <br>
+            <br>
+            <a onclick="cntrl('land')" class="waves-effect waves-light btn">Land</a>
+            <br>
+            <br>
+            <a onclick="cntrl('land')" class="waves-effect waves-light btn">Telemetry</a>
+        </div>
+        <div class="col s4">
+            <div class="row">
+              <div class="col s4"></div>
+              <div class="col s4"><a style="padding-left: 30px;" class="red accent-3 waves-effect waves-light btn"><i class="material-icons left">arrow_upward</i></a></div>
+              <div class="col s4"></div>
+            </div>
+            <div class="row">
+              <div class="col s4"><a style="padding-left: 30px;" class="red accent-3 waves-effect waves-light btn"><i class="material-icons left">arrow_back</i></a></div>
+              <div class="col s4"></div>
+              <div class="col s4"><a style="padding-left: 30px;" class="red accent-3 waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i></a></div>
+            </div>
+            <div class="row">
+              <div class="col s4"></div>
+              <div class="col s4"><a style="padding-left: 30px;" class="red accent-3 waves-effect waves-light btn"><i class="material-icons left">arrow_downward</i></a></div>
+              <div class="col s4"></div>
+            </div>
         </div>
     </div>
 </div>
+
+<script>
+    function cntrl(cmd){
+        alert(cmd);
+    }
+</script>
 </body>
 </html>
